fixed overflow issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,9 @@
   background: #209cee;
   padding: 30px;
   height: 100vh;
+  overflow: auto;
 }
+
 
 .todo-list {
   background: #e8e8e8;
